# PlantCloud

./: .gitignore  README.md  package-lock.json  package.json  云端植物照护系统.md
app/: globals.css  layout.tsx
app/calendar/: page.tsx
app/chat/: page.tsx
app/dashboard/: DashDetail.tsx  DashMain.tsx  page.tsx
app/settings/: page.tsx
backend/: .gitignore  deploy.sh  pom.xml
backend/scripts/: seed_dashboard_chart_data.sql
components/: nav-header.tsx  pixel-plant.tsx
device/D7_sc2_mqtt_alert/: BUILD.gn
device/GpsDevice/: BUILD.gn  iot_cloud_oc_sample.c
device/GpsDevice/include/: E53_ST1.h  app_config.h
device/GpsDevice/src/: E53_ST1.c  wifi_connect.c
device/SmokeGasBackend/: BUILD.gn  iot_cloud_oc_sample.c
device/人体感应模块/: BUILD.gn  iot_cloud_oc_sample.c
device/倾斜模块/: sc2_mqtt_alert.c
docs/: mqtt接口文档  ~$演示案例.docx  演示案例.docx  用户故事.md
fronted/: .env.local  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
fronted/app/: globals.css  layout.tsx  page.tsx
fronted/components/: PlantModelViewer.tsx  auth-guard.tsx  client-providers.tsx  device-control.tsx  face-scanner-frame.tsx  global-navbar.tsx  gps-badge.tsx  gps-map.tsx  nav-header.tsx  route-transition-overlay.tsx
fronted/context/: plant-selection.tsx
fronted/lib/: alert-api.ts  api-client.ts  asset-url.ts  backend-base-url.ts  calendar-api.ts  dashboard-api.ts  device-api.ts  home-api.ts  (+6 more)
mobile-capacitor/: .env.example  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
plant-model-service/: app.py  flask.py
(+242 files in other folders)
